attempts to fix homepage background on mobile

--- a/src/styles/partials/components/home/_hero.scss
+++ b/src/styles/partials/components/home/_hero.scss
@@ -1,4 +1,5 @@
 .home__mobile-bg {
+  height: calc(100vh + 40px);
   max-width: none;
   position: fixed;
   width: 100%;
